--- a/haskell-storm.cabal
+++ b/haskell-storm.cabal
@@ -18,6 +18,9 @@ Library
   Build-Depends:        base >= 4 && < 5
                       , aeson
                       , bytestring
+                      , text
+                      , unix
+                      , vector
 
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
@@ -27,9 +30,13 @@ Test-Suite spec
   Ghc-Options:          -Wall
   Main-Is:              Spec.hs
   Build-Depends:        base
-                      , hspec
-                      , bytestring
                       , aeson
+                      , bytestring
+                      , unordered-containers
+                      , hspec
+                      , text
+                      , unix
+                      , vector
 
 Source-Repository head
   Type:                 git
